# computer-systems-sp19

./: .gitignore  .gitmodules  README.md  file.txt
ch01/challenge01/: Makefile  execute_tokens.c  execute_tokens.h  nush  nush.c  stdout.txt  svec.c  svec.h  tokenize.c  tokenize.h  tokens.md
ch02/: .gitignore  hwx_malloc.h
ch02/challenge02/: README.md  hwx_malloc.c  opt_malloc.c  report.txt  xmalloc.h
hw03/unnas-hw03/: Makefile  quicksort.S  quicksort.c  sort  test.pl
hw04/unnas-hw04/: Makefile  hashmap.c  hashmap.h  hashmap.plist  length-sort  length-sort.c  svec.c  svec.h  test.pl  top-triples  top-triples.c
hw05/unnas_hw05/: Makefile  svec.c  svec.h  test.pl  tokenize.c  tokenize.h  tokens  tokens.c
hw06/hw06-starter/: float_vec.c  float_vec.h  notes0224.md  report.txt  sscort_online.c  ssort.c  utils.c  utils.h
hw07/: CMakeLists.txt  barrier.c  barrier.h  float_vec.c  float_vec.h  report.txt  utils.c
hw07/unnas-hw07/: ssort.c  test.pl  utils.h
hw08/unnas-hw08/: CMakeLists.txt  hmalloc.c  hmalloc.h  stderr.txt  stdout.txt  test.pl
hw08/unnas-hw08/tests/: 01-hello  01-hello.c  02-array-sum  02-array-sum.c  03-list-sum  04-two-lists  05-many-sizes  05-many-sizes.c  Makefile  tools.h
hw09/: .gitignore
hw10/unnas-fshw/: DESIGN  bitmap.c  data.nufs  directory.c  inode.c  inode.h  nufsmount  nufsmount.c  nufstool  pages.c  pages.h  storage.h
notes/: 8_Free_Space_and_GC.pptx
notes/ls_command/: ls  ls.c
notes/shell_assignment/: cio  cio.c  fork1  fork1.c  fork1_exec.c  note_shell_operators.md  notes_assignment_strageties.md  pipe1  pipe1.c  pipe2  (+13 more)
(+40 files in other folders)
